--- a/res/style.css
+++ b/res/style.css
@@ -3,6 +3,10 @@ body {
 }
 * {
     font-family: 'Microsoft Sans Serif', 'Roboto', 'DengXian', '等线', sans-serif;
+    font-size: 16px !important;
+}
+h3 {
+    font-size: 19px !important;
 }
 p {
     margin: 16px 3px;
